# sw_task__

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test.py  test_db_conn.py  wait_for_db.py  wait_for_it.py
assets/js/: home.js
assets/styles/: home.css
base/: settings.py  urls.py
categories/: admin.py  models.py  tests.py  urls.py  utils.py  views.py
categories/fixtures/: initial_categories.json
categories/middleware/: cross_origin_middleware.py
categories/migrations/: 0001_initial.py  0002_auto_20231011_1225.py  0002_category_level.py  0003_remove_category_level.py  0004_category_level.py  0005_alter_category_options.py
categories/models/: Category.py  __init__.py
categories/templates/: categories.html
categories/views/: __init__.py  category.py
category/: admin.py  models.py  urls.py  views.py
category/migrations/: 0001_initial.py
core/: settings.py  urls.py
digi_say/: asgi.py  settings.py  urls.py  wsgi.py
docker/django/: Dockerfile  requirements.txt
readme/: demo.webm
rightshero_task/: Dockerfile  asgi.py  docker-compose.yaml  manage.py  requirements.txt  settings.py  start.sh  urls.py  wsgi.py
rightshero_task/categories_app/: models.py  tests.py  urls.py  views.py
rightshero_task/rightshero_task/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: categories.css  main.css
sw_task/: admin.py  apps.py  models.py  views.py
templates/: home.html
unlimited_categories/: asgi.py  settings.py  urls.py  wsgi.py
(+18 files in other folders)
