[tool.poetry]
name = "sw-task"
version = "0.1.0"
description = ""
authors = ["auto <auto>"]
readme = "README.md"
packages = [{include = "sw_task"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-debug-toolbar = "^4.2.0"
django-cors-headers = "^4.3.0"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
